[package]
name = "tokio-futures"

# When releasing to crates.io:
# - Update html_root_url.
version = "0.2.0"
edition = "2018"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-futures/0.1.0"
description = """
Utilities for working with futures, async, and await.
"""
categories = ["asynchronous"]
publish = false

[features]
all = []
default = [
  "all",
]

[dependencies]
futures-core-preview = "0.3.0-alpha.16"
