[package]
name = "tokio-io"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.1.8"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-io/0.1.8/tokio_io"
description = """
Core I/O primitives for asynchronous I/O in Rust.
"""
categories = ["asynchronous"]

[dependencies]
bytes = "0.4.7"
futures = "0.1.18"
log = "0.4"
