[package]
name = "tokio-io"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.2.0"
edition = "2018"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-io/0.1.12/tokio_io"
description = """
Core I/O primitives for asynchronous I/O in Rust.
"""
categories = ["asynchronous"]
publish = false

[dependencies]
bytes = "0.4.7"
log = "0.4"

[dev-dependencies]
pin-utils = "0.1.0-alpha.4"
tokio-test = { version = "0.2.0", path = "../tokio-test" }
