[package]
name = "tokio-io"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.2.0-alpha.5"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-io/0.2.0-alpha.5/tokio_io"
description = """
Core I/O primitives for asynchronous I/O in Rust.
"""
categories = ["asynchronous"]

[features]
util = ["memchr", "pin-project"]

[dependencies]
bytes = "0.4.7"
log = "0.4"
futures-core-preview = "=0.3.0-alpha.19"
memchr = { version = "2.2", optional = true }
pin-project = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "=0.2.0-alpha.5", path = "../tokio" }
tokio-test = { version = "=0.2.0-alpha.5", path = "../tokio-test" }

futures-util-preview = "=0.3.0-alpha.19"

[package.metadata.docs.rs]
all-features = true
