[package]
name = "tokio-macros"
# When releasing to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
# - Create "tokio-macros-1.0.x" git tag.
version = "1.7.0"
edition = "2018"
rust-version = "1.49"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
Tokio's proc macros.
"""
categories = ["asynchronous"]

[lib]
proc-macro = true

[dev-dependencies]
tokio = { version = "1.0.0", path = "../tokio", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
