[package]
name = "tokio-net"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0-alpha.2"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-net/0.2.0-alpha.2/tokio_net"
description = """
Event loop that drives Tokio I/O resources.
"""
categories = ["asynchronous", "network-programming"]

[features]
async-traits = []
signal = [
    "futures-util-preview",
    "mio-uds",
    "libc",
    "signal-hook-registry",
    "winapi",
]
tcp = [
    "bytes",
    "futures-util-preview",
    "iovec",
]
udp = [
    "bytes",
    "futures-sink-preview",
    "futures-util-preview",
]
uds = [
    "bytes",
    "mio-uds",
    "futures-util-preview",
    "iovec",
    "libc",
]

[dependencies]
tokio-codec = { version = "=0.2.0-alpha.2", path = "../tokio-codec" }
tokio-executor = { version = "=0.2.0-alpha.2", path = "../tokio-executor" }
tokio-io = { version = "=0.2.0-alpha.2", path = "../tokio-io" }
tokio-sync = { version = "=0.2.0-alpha.2", path = "../tokio-sync" }

# driver implementation
crossbeam-utils = "0.6.0"
futures-core-preview = "=0.3.0-alpha.18"
lazy_static = "1.0.2"
log = "0.4.6"
mio = "0.6.14"
num_cpus = "1.8.0"
parking_lot = "0.9"
slab = "0.4.0"

# TCP / UDP
bytes = { version = "0.4", optional = true }
futures-sink-preview = { version = "=0.3.0-alpha.18", optional = true }
futures-util-preview = { version = "=0.3.0-alpha.18", optional = true }
iovec = { version = "0.1", optional = true }

[target.'cfg(unix)'.dependencies]
# UDS / Signal
mio-uds = { version = "0.6.5", optional = true }
libc = { version = "0.2.42", optional = true }
signal-hook-registry = { version = "~1", optional = true }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["consoleapi", "minwindef", "wincon"]
optional = true

[dev-dependencies]
tokio = { version = "0.2.0-alpha.1", path = "../tokio" }
tokio-test = { version = "0.2.0-alpha.1", path = "../tokio-test" }
num_cpus = "1.8.0"
tokio-io-pool = "0.1.4"

# UDS tests
tempfile = "3"
futures-preview = "=0.3.0-alpha.18"

[package.metadata.docs.rs]
all-features = true
