[package]
name = "tokio-net"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0-alpha.5"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-net/0.2.0-alpha.5/tokio_net"
description = """
Event loop that drives Tokio I/O resources.
"""
categories = ["asynchronous", "network-programming"]

[features]
async-traits = []
process = [
    "tokio-io/util",
    "crossbeam-queue",
    "libc",
    "mio-named-pipes",
    "signal",
    "winapi/handleapi",
    "winapi/winerror",
    "winapi/minwindef",
    "winapi/processthreadsapi",
    "winapi/synchapi",
    "winapi/threadpoollegacyapiset",
    "winapi/winbase",
    "winapi/winnt",
]
signal = [
    "mio-uds",
    "libc",
    "signal-hook-registry",
    "winapi/consoleapi",
    "winapi/minwindef",
    "winapi/wincon"
]
tcp = [
    "bytes",
    "iovec",
]
udp = [
    "bytes",
    "futures-sink-preview",
]
uds = [
    "bytes",
    "mio-uds",
    "iovec",
    "libc",
]
log = ["tracing/log"]

[dependencies]
tokio-codec = { version = "=0.2.0-alpha.5", path = "../tokio-codec" }
tokio-executor = { version = "=0.2.0-alpha.5", features = ["blocking"], path = "../tokio-executor" }
tokio-io = { version = "=0.2.0-alpha.5", path = "../tokio-io" }
tokio-sync = { version = "=0.2.0-alpha.5", path = "../tokio-sync" }

tracing = { version = "0.1.5", optional = true }

# driver implementation
crossbeam-utils = "0.6.0"
futures-core-preview = "=0.3.0-alpha.18"
futures-util-preview = "=0.3.0-alpha.18"
lazy_static = "1.0.2"
mio = "0.6.14"
num_cpus = "1.8.0"
parking_lot = "0.9"
slab = "0.4.0"

# TCP / UDP
bytes = { version = "0.4", optional = true }
futures-sink-preview = { version = "=0.3.0-alpha.18", optional = true }
iovec = { version = "0.1", optional = true }

[target.'cfg(unix)'.dependencies]
# UDS / Signal
crossbeam-queue = { version = "0.1.2", optional = true }
mio-uds = { version = "0.6.5", optional = true }
libc = { version = "0.2.42", optional = true }
signal-hook-registry = { version = "~1", optional = true }

[target.'cfg(windows)'.dependencies]
mio-named-pipes = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
default-features = false
optional = true

[target.'cfg(test)'.dependencies]
tracing = { version = "0.1.5", features = ["log"] }

[dev-dependencies]
tokio = { version = "=0.2.0-alpha.5", path = "../tokio" }
tokio-test = { version = "=0.2.0-alpha.5", path = "../tokio-test" }
num_cpus = "1.8.0"
tokio-io-pool = "0.1.4"

# UDS tests
tempfile = "3"
futures-preview = { version = "=0.3.0-alpha.18", features = ["nightly", "async-await"] }

[package.metadata.docs.rs]
all-features = true
