[package]
name = "tokio-process"
# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Create "X.Y.Z" git tag.
version = "0.2.4"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://github.com/tokio-rs/tokio"
documentation = "https://docs.rs/tokio-process/0.2.4/tokio_process"
description = """
An implementation of an asynchronous process management backed futures.
"""
categories = ["asynchronous"]

[dependencies]
futures-util-preview = { version = "0.3.0-alpha.17", features = ["io"] }
futures-core-preview = { version = "0.3.0-alpha.17" }
tokio-io = { version = "0.2.0", path = "../tokio-io" }
tokio-reactor = { version = "0.2.0", path = "../tokio-reactor" }
tokio-sync = { version = "0.2.0", path = "../tokio-sync" }

[dev-dependencies]
failure = "0.1"
log = "0.4"
tokio = { version = "0.2.0", path = "../tokio" }

[target.'cfg(windows)'.dependencies]
mio-named-pipes = "0.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
  "handleapi",
  "winerror",
  "minwindef",
  "processthreadsapi",
  "synchapi",
  "threadpoollegacyapiset",
  "winbase",
  "winnt",
]

[target.'cfg(unix)'.dependencies]
crossbeam-queue = "0.1.2"
lazy_static = "1.3"
libc = "0.2"
log = "0.4"
mio = "0.6.5"
tokio-signal = { version = "0.3.0", path = "../tokio-signal" }
