[package]
name = "tokio-sync"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0"
edition = "2018"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-sync/0.1.5/tokio_sync"
description = """
Synchronization utilities.
"""
categories = ["asynchronous"]
publish = false

[features]
async-traits = ["async-sink", "futures-core-preview"]

[dependencies]
async-util = { git = "https://github.com/tokio-rs/async" }
async-sink = { git = "https://github.com/tokio-rs/async", optional = true }
fnv = "1.0.6"
futures-core-preview = { version = "0.3.0-alpha.16", optional = true }

[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
pin-utils = "0.1.0-alpha.4"
tokio = { version = "*", path = "../tokio" }
tokio-test = { version = "0.2.0", path = "../tokio-test" }
loom = { git = "https://github.com/carllerche/loom", branch = "std-future2", features = ["futures"] }
