[package]
name = "tokio-sync"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0-alpha.2"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-sync/0.2.0-alpha.1/tokio_sync"
description = """
Synchronization utilities.
"""
categories = ["asynchronous"]

[features]
async-traits = ["futures-sink-preview"]

[dependencies]
fnv = "1.0.6"
futures-core-preview = { version = "=0.3.0-alpha.18" }
futures-sink-preview = { version = "=0.3.0-alpha.18", optional = true }
futures-util-preview = { version = "=0.3.0-alpha.18" }

[dev-dependencies]
tokio = { version = "0.2.0-alpha.1", path = "../tokio" }
tokio-test = { version = "0.2.0-alpha.1", path = "../tokio-test" }

env_logger = { version = "0.6", default-features = false }
loom = { version = "0.2.1", features = ["futures"] }

[package.metadata.docs.rs]
all-features = true
