[package]
name = "tokio-tcp"

# When releasing to crates.io:
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.3"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-tcp/0.1.3/tokio_tcp"
description = """
TCP bindings for tokio.
"""
categories = ["asynchronous"]

[dependencies]
tokio-io = "0.1.6"
tokio-reactor = "0.1.1"
bytes = "0.4"
mio = "0.6.14"
iovec = "0.1"
futures = "0.1.19"

[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
tokio = "0.1.13"
