[package]
name = "tokio-tcp"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0"
edition = "2018"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-tcp/0.1.3/tokio_tcp"
description = """
TCP bindings for tokio.
"""
categories = ["asynchronous"]
publish = false

[features]
incoming = ["futures-core-preview"]

[dependencies]
tokio-io = { version = "0.2.0", path = "../tokio-io" }
tokio-reactor = { version = "0.2.0", path = "../tokio-reactor" }
bytes = "0.4"
mio = "0.6.14"
iovec = "0.1"

# optionals
futures-core-preview = { version = "0.3.0-alpha.16", optional = true }

[dev-dependencies]
#env_logger = { version = "0.5", default-features = false }
#net2 = "*"
#tokio = { version = "0.2.0", path = "../tokio" }
