[package]
name = "tokio-tcp"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.0-alpha.1"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-tcp/0.2.0-alpha.1/tokio_tcp"
description = """
TCP bindings for tokio.
"""
categories = ["asynchronous"]

[features]
async-traits = []

[dependencies]
tokio-io = { version = "=0.2.0-alpha.1", path = "../tokio-io" }
tokio-reactor = { version = "=0.2.0-alpha.1", path = "../tokio-reactor" }

futures-core-preview = "=0.3.0-alpha.17"
futures-util-preview = "=0.3.0-alpha.17"
bytes = "0.4"
mio = "0.6.14"
iovec = "0.1"


[dev-dependencies]
tokio = { version = "=0.2.0-alpha.1", path = "../tokio" }
tokio-test = { version = "=0.2.0-alpha.1", path = "../tokio-test" }
