[package]
name = "tokio-test"
# When releasing to crates.io:
# - Remove path dependencies (if any)
# - Update CHANGELOG.md.
# - Create "tokio-test-0.4.x" git tag.
version = "0.4.5"
edition = "2021"
rust-version = "1.71"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
Testing utilities for Tokio- and futures-based code
"""
categories = ["asynchronous", "development-tools::testing"]

[dependencies]
tokio = { workspace = true, features = ["rt", "sync", "test-util", "time"] } #unified
tokio-stream = { workspace = true } #unified
futures-core = "0.3.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] } #unified
futures-util = "0.3.0"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
