[package]
name = "tokio-threadpool"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.18"
documentation = "https://docs.rs/tokio-threadpool/0.1.18/tokio_threadpool"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://github.com/tokio-rs/tokio"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = """
A task scheduler backed by a work-stealing thread pool.
"""
keywords = ["futures", "tokio"]
categories = ["concurrency", "asynchronous"]

[dependencies]
tokio-executor = "0.1.8"
futures = "0.1.19"
crossbeam-deque = "0.7.0"
crossbeam-queue = "0.2.0"
crossbeam-utils = "0.7.0"
num_cpus = "1.2"
slab = "0.4.1"
log = "0.4"
lazy_static = "1"

[dev-dependencies]
rand = "0.7"
env_logger = { version = "0.6", default-features = false }

# For comparison benchmarks
futures-cpupool = "0.1.7"
threadpool = "1.7.1"
