[package]
name = "tokio-timer"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.3.x" git tag.
version = "0.3.0"
edition = "2018"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tokio-timer/0.2.11/tokio_timer"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://github.com/tokio-rs/tokio"
description = """
Timer facilities for Tokio
"""
publish = false

[features]
# individual `Stream` impls if you so desire
delay-queue = ["futures-core-preview"]
interval = ["futures-core-preview"]
timeout-stream = ["futures-core-preview"]
throttle = ["futures-core-preview"]

# easily enable all `Stream` impls
streams = [
    "delay-queue",
    "interval",
    "timeout-stream",
    "throttle",
]

[dependencies]
tokio-executor = { version = "0.2.0", path = "../tokio-executor" }
tokio-sync = { version = "0.2.0", path = "../tokio-sync" }
crossbeam-utils = "0.6.0"

# Backs `DelayQueue`
slab = "0.4.1"

# optionals
futures-core-preview = { version = "0.3.0-alpha.16", optional = true }

[dev-dependencies]
rand = "0.6"
tokio-mock-task = "0.1.0"
tokio = { version = "0.2.0", path = "../tokio" }
