[package]
name = "tokio-timer"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.3.x" git tag.
version = "0.3.0-alpha.1"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tokio-timer/0.3.0-alpha.1/tokio_timer"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://github.com/tokio-rs/tokio"
description = """
Timer facilities for Tokio
"""

[features]
async-traits = []

[dependencies]
tokio-executor = { version = "=0.2.0-alpha.1", path = "../tokio-executor" }
tokio-sync = { version = "=0.2.0-alpha.1", path = "../tokio-sync" }

futures-core-preview = "=0.3.0-alpha.18"
futures-util-preview = "=0.3.0-alpha.18"

crossbeam-utils = "0.6.0"
# Backs `DelayQueue`
slab = "0.4.1"
# optionals

[dev-dependencies]
tokio = { version = "=0.2.0-alpha.1", path = "../tokio" }
tokio-current-thread = { version = "=0.2.0-alpha.1", path = "../tokio-current-thread" }
tokio-sync = { version = "=0.2.0-alpha.1", path = "../tokio-sync", features = ["async-traits"] }
tokio-test = { version = "=0.2.0-alpha.1", path = "../tokio-test" }

rand = "0.7"
